--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://prakash-aathi.github.io/repo name", 
+  "homepage":"http://prakash-aathi.github.io/healthCompanion", 
   "name": "health-companion",
   "version": "0.1.0",
   "private": true,
